--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ gems: [jekyll-paginate]
 tag_dir: /tag
 category_dir: /category
 author_dir: /author
-author_title_prefix: 'Posted by '
+author_title_prefix: 'Publicado por '
 media_folder: /media/compressed
 author_default_avatar: /profile-pic.jpg
 tumblr: "#"
@@ -31,7 +31,7 @@ defaults:
       path: ""
       type: "posts"
     values:
-      layout: "post-material-sidebar-left"
+      layout: "post-full"
       type: "standard"
       homedisplay: "featimg"
 markdown: kramdown
